# pybot

./: .replit  README.md  keep_alive.py  main.py  pyproject.toml  requirements.txt
cogs/: antispam.py  connect4.py  error_handler.py  events.py  fun.py  general.py  help.py  logs.py  logs_events.py  moderation.py  rps.py  serverinfo.py  settings.py  ticket.py  tictactoe.py  utility.py  xpersonal.py
cogs/utils/: alerts.py  game.py
db/: antispam.db  log_joins.db  log_leaves.db  log_messages_deletes.db  log_role_updates.db  suggestions.db  tickets_role.db
jsons/: filter.json  prefixes.json  suggest.json  ticket_roles.json  welcome.json
