[tool.poetry]
name = "repl_nix_ShinobiBot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
praw = "^7.7.0"
wikipedia = "^1.4.0"
aiohttp = "^3.9.2"
aiosqlite = "^0.18.0"
bs4 = "^0.0.1"
deep-translator = "^1.10.1"
discord = "^2.2.2"
Flask = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
